# pydisks

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test_main.py
src/pydisks/: __init__.py
