[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydisks"
dynamic = ["version"]
description = "Volumes and surface areas of solids of revolution (disc, washer, shell) via SymPy."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Advay Roongta", email = "roongtaadvay@gmail.com" },
]
keywords = ["calculus", "integration", "solids of revolution", "volume", "sympy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.8",
]

[project.urls]
Homepage = "https://github.com/AdvayRoongta/pydisks"
Repository = "https://github.com/AdvayRoongta/pydisks"
Issues = "https://github.com/AdvayRoongta/pydisks/issues"

[tool.hatch.version]
path = "src/pydisks/__init__.py"
